# agentcage

./: .env.example  .gitignore  .goreleaser.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  agentcage.yaml  config.dev.yaml  docker-compose.yaml  embed.go  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
docs/: ARCHITECTURE.md  README.md  REASONER.md  VESSELFILE.md  agent-contract.md  budget.md  build.md  call.md  config.md  daemon.md  egress.md  eval.md  events.md  import.md  init.md  inspect.md  keys.md  known-issues.md  login.md  logs.md  macos-removal.md  observe.md  ps.md  pull.md  push.md  register.md  replay.md  run.md  search.md  secrets.md  serve.md  signing.md  spend.md  stats.md  stop.md  store.md  trace.md  tree.md  troubleshooting.md  trust.md
migrations/: 000_extensions.sql  001_cages.sql  002_assessments.sql  003_findings.sql  004_audit_entries.sql  005_cost_records.sql  006_slo_metrics.sql  007_fleet_state.sql  008_demand_history.sql  009_interventions.sql  010_audit_digests.sql  doc.go  migrate.go
proofs/: doc.go  embed.go  sqli_error_based.yaml  sqli_union_based.yaml  ssrf_callback.yaml  xss_stored.yaml
scripts/: build-cage-kernel.sh  build-cage-rootfs.sh  build-kernel.sh  build-vm-kernel.sh  build-vm-rootfs.sh  check_checksums.go  check_config.go  check_secret_redaction.go  embed-checksums.sh  kconfig-patch.sh  list_tool_packages.go
sdk/python/: README.md  pyproject.toml
sdk/python/agentcage/: __init__.py  _agent_class.py  _agents.py  client.py  llm.py  runtime.py
sdk/python/examples/hello/: Agentfile  agent.py
sdk/python/tests/: test_agent.py  test_agents.py  test_llm.py  test_runtime.py
(+808 files in other folders)
